--- a/space.css
+++ b/space.css
@@ -1,5 +1,5 @@
 body{
-    background-image:"url(system1.jpg)";
+    background-image:url('system1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -14,4 +14,6 @@ body{
 .main{
     color: white;
     text-align: center;
+    margin: auto;
+    width: 400px;
 }
