--- a/Quiz/quiz.css
+++ b/Quiz/quiz.css
@@ -5,6 +5,11 @@ body{
 
 
 .body{
+    margin: auto;
+    padding: 5px 40% 5px 40%;
+}
+
+.display{
     text-align: center;
-    position: relative;
+    margin: auto;
 }
