--- a/Final/Hittites.css
+++ b/Final/Hittites.css
@@ -1,20 +1,21 @@
 body{
     margin: 0%;
+    background-color: #5f2f2d;
 }
 
 
 .nav ul
 {
 list-style-type: none;
-background-color: #beb06d;
+background-color: #5f2f2d;
 margin: -8px;
 overflow: hidden;
-border: groove black 8px;
+border: groove #c4a570 6px;
 }
 
 .nav a
 {
-color: white;
+color: #c4a570;
 text-decoration: none;
 padding: 15px;
 display: block;
@@ -23,12 +24,16 @@ text-align: center;
 
 .nav a:hover
 {
-background-color: #bda951;
+background-color: #552a2a;
+border-radius: 35px;
+transition: 0.8s;
+box-shadow: 2px 2px 6px #6b3330;
 }
 
 .nav li
 {
 float: left;
+margin-left: 35px;
 }
 
 .head
@@ -43,7 +48,10 @@ align-items: center;
 {
 display: inline-block;
 vertical-align: middle;
+color: #c4a570;
+text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
 }
+
 
 .logo
 {
@@ -51,3 +59,20 @@ margin-right: 20px;
 width: 7%;
 padding: 15px;
 }
+
+.top {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #5f2f2d;
+  }
+  
+  .body{
+    margin-top: 250px;
+    margin-left: 100px;
+    margin-right: 100px;
+    color: #c4a570;
+  }
+
+
