--- a/Final/Hittites.css
+++ b/Final/Hittites.css
@@ -3,8 +3,6 @@ body{
     background-color: #5f2f2d;
 }
 
-
-
 .nav ul
 {
 list-style-type: none;
@@ -44,6 +42,11 @@ display: flex;
 align-items: center;
 }
 
+.HE{
+    font-size: 45px;
+    font-weight: bolder;
+}
+
 .text
 {
 display: inline-block;
@@ -77,16 +80,16 @@ padding: 15px;
 
 .hook {
     height: 500px;
-    background: linear-gradient(to bottom, rgba(99, 85, 85, 0.5), rgba(0, 0, 0, 0.5)), url('bgh.jpg');
+    background: linear-gradient(to bottom, rgba(88, 82, 82, 0.37), rgba(0, 0, 0, 0.747)), url('bgh.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    color: #5f2f2d;
+    color: #c4a570;
     border-radius: 70px;
-    border: 10px solid #5f2f2d;
+    border: 7px solid #5f2f2d;
     outline: 5px solid #c4a570;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
