--- a/Final/Hittites.css
+++ b/Final/Hittites.css
@@ -165,5 +165,9 @@ padding: 15px;
 }
 
 .vid{
-    margin: 175px auto;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  object-fit: cover;
 }
