--- a/Final/Hittites.css
+++ b/Final/Hittites.css
@@ -81,7 +81,7 @@ padding: 15px;
 
 .hook {
     height: 500px;
-    background: linear-gradient(to bottom, rgba(88, 82, 82, 0.37), rgba(0, 0, 0, 0.747)), url('bghh.mp4');
+    background: linear-gradient(to bottom, rgba(88, 82, 82, 0.37), rgba(0, 0, 0, 0.747));
     background-size: cover;
     background-position: center;
     display: flex;
@@ -131,38 +131,6 @@ padding: 15px;
 
 .emp{
     text-indent: 20px;
-}
-
-.hookr {
-    height: 500px;
-    background: linear-gradient(to bottom, rgba(88, 82, 82, 0.37), rgba(0, 0, 0, 0.747)), url('bghr.mp4');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #c4a570;
-    border-radius: 70px;
-    border: 7px solid #5f2f2d;
-    outline: 5px solid #c4a570;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-}
-
-.hookl {
-    height: 500px;
-    background: linear-gradient(to bottom, rgba(88, 82, 82, 0.37), rgba(0, 0, 0, 0.747)), url('bghl.mp4');
-    background-size: cover;
-    background-position: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    color: #c4a570;
-    border-radius: 70px;
-    border: 7px solid #5f2f2d;
-    outline: 5px solid #c4a570;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .vid{
