--- a/Final/Hittites.css
+++ b/Final/Hittites.css
@@ -81,6 +81,7 @@ padding: 15px;
 
 .hook {
     height: 500px;
+    width: 100%;
     background: linear-gradient(to bottom, rgba(88, 82, 82, 0.37), rgba(0, 0, 0, 0.747));
     background-size: cover;
     background-position: center;
@@ -89,10 +90,11 @@ padding: 15px;
     align-items: center;
     text-align: center;
     color: #c4a570;
-    border-radius: 70px;
     border: 7px solid #5f2f2d;
     outline: 5px solid #c4a570;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+    overflow: hidden;
+    position: relative;
 }
 
 .hook-content {
@@ -100,6 +102,8 @@ padding: 15px;
 }
 
 .hook h1 {
+    top: 0;
+    left: 0;
     font-size: 48px;
     margin-bottom: 20px;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
@@ -108,6 +112,14 @@ padding: 15px;
 .hook p {
     font-size: 20px;
     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+}
+
+.hook video {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 
@@ -154,10 +166,3 @@ padding: 15px;
     box-shadow: 0 0 20px #c4a570;
 }
 
-.hook video {
-    position: absolute;
-    width: inherit;
-    height: inherit;
-    object-fit: cover;
-    z-index: -1;
-}
