--- a/Final/Hittites.css
+++ b/Final/Hittites.css
@@ -147,10 +147,13 @@ body{
 }
 
 .vid{
-  width: 20%;
-  display: inline-block;
-  vertical-align: middle;
-  padding-top: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
 }
 
 .video-overlay {
