--- a/Final/Hittites.css
+++ b/Final/Hittites.css
@@ -181,7 +181,7 @@ body{
     text-align: center;
     padding: 20px;
     background-color: #5f2f2d;
-    border: 4px solid #c4a570;
+    border: 4px groove #c4a570;
 }
 
 .video-buttons {
